<resources>
    <string name="app_name">Produk DMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_visit">Check in</string>
    <string name="product">Product</string>
    <string name="customer">Customer</string>
    <string name="staff">Staff</string>
    <string name="title_analytics">Analytics</string>
    <string name="monitoring">Monitoring</string>
    <string name="statistical">Analytics</string>
    <string name="title_other">Other</string>
    <string name="logout">Logout</string>
    <string name="title_exit">Exit</string>
    <string name="work">Work</string>
    <string name="title_welcome">Welcome to Produk App!</string>
    <string name="hello">Hello Everyone!</string>
    <string name="sub_title">Management, monitoring and distribution of products easily.</string>
    <string name="get_started">Get Started!</string>
    <string name="sub_title_started">To get started, click the START NOW button.</string>
    <string name="start_now">GET STARTED</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="function">Function</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="title_notification">Notifications</string>
    <string name="title_orders">Orders</string>
    <string name="search_hint">Search in here…</string>
    <string name="report">Report</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_type">Customer Type</string>
    <string name="title_area">Area</string>
    <string name="title_route">Route</string>
    <string name="contact">Contact</string>
    <string name="title_position">Position</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="note">Note</string>
    <string name="debt_limit">Debt Limit</string>
    <string name="title_save">Save</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="avt_customer">Customer Avatar</string>
    <string name="take_picture">Take Picture</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="address">Address</string>
    <string name="delete">Delete</string>
    <string name="upload_img">Upload Image</string>
    <string name="upload_complete">Upload Complete!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_product">Add Product</string>
    <string name="add_order">Add Order</string>
    <string name="title_edit">Edit</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_route">Choose a route…</string>
    <string name="choose_sales">Choose a sales…</string>
    <string name="choose_customer">Choose a customer…</string>
    <string name="provider">Provider</string>
    <string name="dialog">Dialog</string>
    <string name="choose_ncc">Choose a provider…</string>
    <string name="edit_order">Edit Order</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="start_check_in">Start Check in</string>
    <string name="get_directions">Get Directions</string>
    <string name="title_filter">Filter</string>
    <string name="choose_product">Choose a product</string>
    <string name="choose_industry">Choose a industry…</string>
    <string name="title_detail">Detail</string>

</resources>
